--- a/Node/react-jest-typescript /package.json
+++ b/Node/react-jest-typescript /package.json
@@ -9,7 +9,7 @@
     "test": "rimraf ./a11y-results && jest"
   },
   "dependencies": {
-    "@axe-devtools/jest": "4.2.0",
+    "@axe-devtools/jest": "file:axe-devtools-jest-4.2.0.tgz",
     "@axe-devtools/reporter": "4.4.0",
     "@testing-library/jest-dom": "^4.2.3",
     "@testing-library/react": "^12.1.2",
@@ -20,7 +20,6 @@
     "@types/react-dom": "^16.9.3",
     "babel-polyfill": "^6.26.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-15": "^1.4.3",
     "enzyme-adapter-react-16": "^1.15.6",
     "jest": "^24.9.0",
     "react": "^16.11.0",
