--- a/Java/testNG/pom.xml
+++ b/Java/testNG/pom.xml
@@ -7,9 +7,9 @@
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
-    <name>axe DevTools Java Example - testNG</name>
+    <name>axe DevTools Java Example - Hamcrest and testNG</name>
     <description>
-        axe DevTools automated testing for Java Example with testNG
+        axe DevTools automated testing for Java Example with Hamcrest and testNG
     </description>
 
     <licenses>
@@ -55,6 +55,26 @@
     </repositories>
 
     <dependencies>
-  
+        <dependency>
+            <groupId>com.deque.html.axe-devtools</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
