--- a/Node/cypress/.gitignore
+++ b/Node/cypress/.gitignore
@@ -4,12 +4,13 @@
 /dist
 /tmp
 /out-tsc
+/a11y-results
 # Only exists if Bazel was run
 /bazel-out
 
 # dependencies
 /node_modules
-package-lock.json
+/package-lock.json
 
 # profiling files
 chrome-profiler-events.json
@@ -41,11 +42,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
-/a11y-results
 
 # System Files
 .DS_Store
 Thumbs.db
-
-# bundle zip
-*.zip
