--- a/Node/webdriverio/.gitignore
+++ b/Node/webdriverio/.gitignore
@@ -9,6 +9,7 @@
 
 # dependencies
 /node_modules
+package-lock.json
 
 # profiling files
 chrome-profiler-events.json
@@ -40,6 +41,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+/a11y-results
 
 # System Files
 .DS_Store
