--- a/Node/playwright_vanilla/package.json
+++ b/Node/playwright_vanilla/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "rimraf ./a11y-results/ && npx playwright test --headed"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.21.1"
-  },
-  "dependencies": {
+    "@playwright/test": "^1.21.1",
     "@axe-devtools/playwright": "^4.4.1",
     "@axe-devtools/reporter": "^4.4.0",
-    "uuid": "^8.3.2"
+    "rimraf": "^3.0.2"
   }
 }
