--- a/Node/puppeteer_vanilla/package.json
+++ b/Node/puppeteer_vanilla/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "rimraf ./a11y-results && node ./tests/*.spec.js"
+    "test": "rimraf ./a11y-results && node ./tests/example.spec.js"
   },
   "keywords": [],
   "author": "",
