Updating the package.json and test file
Changing the dependencies to devDependencies and removing commented lines from example.specj.js

--- a/Node/puppeteer_vanilla/package.json
+++ b/Node/puppeteer_vanilla/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@axe-devtools/puppeteer": "^4.4.1",
     "@axe-devtools/reporter": "^4.4.0",
     "puppeteer": "^13.7.0",
