--- a/Node/playwright_vanilla/package.json
+++ b/Node/playwright_vanilla/package.json
@@ -1,7 +1,7 @@
 {
   "name": "playwright_vanilla example project",
   "version": "1.0.0",
-  "description": "This example project uses `@axe-devtools/reporter`, `@axe-devtools/playwright`, and `@playwright/test`. Go through the `README` to learn more.",
+  "description": "This example project uses `@axe-devtools/reporter`, `@axe-devtools/playwright`, and `@playwright/test`. See `README` to learn more.",
   "main": "index.js",
   "scripts": {
     "test": "rimraf ./a11y-results/ && npx playwright test --headed"
