--- a/Node/vue-browser/package.json
+++ b/Node/vue-browser/package.json
@@ -3,12 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:jest": "jest",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "test": "jest"
   },
   "dependencies": {
     "register-service-worker": "^1.7.2",
