--- a/Node/vue-browser/package.json
+++ b/Node/vue-browser/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "hello-world",
-  "version": "0.1.0",
+  "name": "vue-browser",
+  "version": "1.0",
   "private": true,
+  "description": "This example project uses `@axe-devtools/reporter`and `@axe-devtools/browser`. See `README` to learn more.",
   "scripts": {
     "test": "rimraf ./a11y-results/ && jest"
   },
-  "dependencies": {
-    "register-service-worker": "^1.7.2",
-    "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
-  },
+  "author": "Ankit Kathal",
+  "keywords": [
+    "vue - browser - axe-devtools-api"
+  ],
   "devDependencies": {
     "@axe-devtools/browser": "^4.4.1",
     "@types/jest": "^27.0.1",
@@ -39,6 +37,11 @@
     "sass-loader": "^12.0.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5",
-    "@axe-devtools/reporter": "^4.4.0"
+    "@axe-devtools/reporter": "^4.4.0",
+    "register-service-worker": "^1.7.2",
+    "vue": "^3.2.13",
+    "vue-class-component": "^8.0.0-0",
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   }
 }
