--- a/C#/MSTest/nuget.config
+++ b/C#/MSTest/nuget.config
@@ -2,7 +2,7 @@
 <configuration>
  <packageSources>
     <!--To inherit the global NuGet package sources remove the <clear/> line below -->
-    <!-- <clear /> -->
+    <clear />
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
     <add key="ArtifactoryWindows" value="https://agora.dequecloud.com/artifactory/api/nuget/devtools-nuget/" />
     <add key="ArtifactoryUnix" value="https://agora.dequecloud.com/artifactory/api/nuget/devtools-nuget/" />
