--- a/C#/Selenium/tests.csproj
+++ b/C#/Selenium/tests.csproj
@@ -3,15 +3,15 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
+    <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="axe-devtools-selenium" Version="4.0.0" />
+    <PackageReference Include="axe-devtools-selenium" Version="4.4.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
-    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
-    <PackageReference Include="Selenium.Chrome.WebDriver" Version="76.0.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.0.1" />
+    <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="reports\" />
