--- a/Node/vue-browser/package.json
+++ b/Node/vue-browser/package.json
@@ -12,11 +12,11 @@
   ],
   "devDependencies": {
     "@axe-devtools/browser": "^4.4.1",
+    "@axe-devtools/reporter": "^4.4.0",
     "@types/jest": "^27.0.1",
     "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-e2e-cypress": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
@@ -24,22 +24,22 @@
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.2.37",
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
-    "cypress": "^8.3.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "register-service-worker": "^1.7.2",
     "rimraf": "^3.0.2",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "ts-jest": "^27.0.4",
+    "tslib": "^2.4.0",
     "typescript": "~4.5.5",
-    "@axe-devtools/reporter": "^4.4.0",
-    "register-service-worker": "^1.7.2",
-    "vue": "^3.2.13",
+    "vue": "^3.2.36",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
