Updating the url tag in the pom.xml

--- a/Java/hamcrest/pom.xml
+++ b/Java/hamcrest/pom.xml
@@ -16,8 +16,7 @@
   </repositories>
 
   <name>hamcrest</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/dequelabs/axe-devtools-html-api-examples</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
