--- a/Java/java-selenium/pom.xml
+++ b/Java/java-selenium/pom.xml
@@ -15,8 +15,7 @@
   </repositories>
 
   <name>java-selenium</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/dequelabs/axe-devtools-html-api-examples</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
