--- a/Java/hamcrest/pom.xml
+++ b/Java/hamcrest/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>deque</groupId>
   <artifactId>hamcrest</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>4.2.2</version>
 
   <repositories>
     <repository>
