--- a/Java/playwright/pom.xml
+++ b/Java/playwright/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.example</groupId>
   <artifactId>playwright</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>4.2.2</version>
   <repositories>
     <repository>
       <id>deque</id>
