--- a/Ruby/capybara-rspec/Gemfile
+++ b/Ruby/capybara-rspec/Gemfile
@@ -3,3 +3,5 @@ gem 'webdrivers', '~> 5.0', require: false
 gem "axe-devtools-capybara", '~> 4.4.0', :source => 'https://agora.dequecloud.com/artifactory/api/gems/devtools-gems'
 gem "axe-devtools-rspec", '~> 4.4.0', :source => 'https://agora.dequecloud.com/artifactory/api/gems/devtools-gems'
 gem 'selenium-webdriver', '~> 4.3'
+gem "rspec"
+gem 'capybara', '~> 3.37', '>= 3.37.1'
