--- a/Node/webdriverjs-cucumber/package.json
+++ b/Node/webdriverjs-cucumber/package.json
@@ -1,10 +1,10 @@
 {
   "name": "webdriverjs-cucumber",
-  "version": "1.0.0",
+  "version": "4.4.1",
   "description": "Example project integrating webdriverjs-cucumber with axedevtools-api to help find the a11y issues",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js"
+    "test": "rimraf ./a11y-results && cucumber-js"
   },
   "author": "Ankit Kathal",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "cucumber": "^6.0.7",
     "selenium-webdriver": "^4.4.0",
     "@axe-devtools/reporter": "^4.4.0",
-    "@axe-devtools/webdriverjs": "^4.4.1"
+    "@axe-devtools/webdriverjs": "^4.4.1",
+    "rimraf": "^3.0.2"
   }
 }
