--- a/Node/codeceptjs/package.json
+++ b/Node/codeceptjs/package.json
@@ -4,7 +4,6 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "codeceptjs": "rimraf ./a11y-results && codeceptjs run --steps",
         "codeceptjs:headless": "HEADLESS=true codeceptjs run --steps",
         "codeceptjs:ui": "codecept-ui --app",
@@ -12,9 +11,13 @@
         "codeceptjs:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
         "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
     },
-    "keywords": [],
+    "keywords": [
+        "codeceptjs",
+        "example project",
+        "axe-devtools-api integration"
+    ],
     "author": "",
-    "license": "ISC",
+    "license": "UNLICENSED",
     "devDependencies": {
         "@codeceptjs/configure": "^0.8.0",
         "@codeceptjs/examples": "^1.2.1",
