example project changes

--- a/Node/playwright/package.json
+++ b/Node/playwright/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playwright example project",
+  "name": "playwright-example-project",
   "version": "4.4.0",
   "description": "This example project uses `@axe-devtools/reporter`, `@axe-devtools/playwright`, and `@playwright/test`. See `README` to learn more.",
   "main": "index.js",
