--- a/C#/Selenium/tests.csproj
+++ b/C#/Selenium/tests.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="axe-devtools-selenium" Version="4.4.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.0.1" />
-    <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="112.0.5615.4900" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="reports\" />
