cucumber_pico_changes

--- a/Java/java-selenium/pom.xml
+++ b/Java/java-selenium/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>webdrivermanager</artifactId>
       <version>5.1.0</version>
     </dependency>
+    <dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-http-jdk-client</artifactId>
+	    <version>4.8.1</version>
+	  </dependency>
   </dependencies>
 
   <build>
