--- a/Node/angular-karma/package.json
+++ b/Node/angular-karma/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "rimraf rimraf ./a11y-results && ng test"
   },
   "private": true,
   "dependencies": {
