--- a/Node/nextjs/package.json
+++ b/Node/nextjs/package.json
@@ -9,13 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.5.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@axe-devtools/browser": "^4.4.0",
-    "@axe-devtools/reporter": "^4.4.0",
+    "@axe-devtools/browser": "^4.7.0",
+    "@axe-devtools/reporter": "^4.7.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "jest": "^29.6.4",
