chore: bundled clean install

--- a/Node/axeTestcafe/package.json
+++ b/Node/axeTestcafe/package.json
@@ -4,12 +4,12 @@
   "description": "axe-devtools integration for TestCafe",
   "main": "axeTestCafe.js",
   "scripts": {
+    "preinstall": "axe-devtools-install script-builder reporter",
     "test": "rimraf ./a11y-results && npx testcafe chrome spec1.js"
   },
   "author": "Mark Steadman",
   "license": "ISC",
   "devDependencies": {
-    "@axe-devtools/reporter": "^4.5.1",
     "axe-core": "4.6.1",
     "bin-v8-flags-filter": "^1.2.0",
     "elegant-spinner": "^2.0.0",
@@ -18,8 +18,5 @@
     "node-fetch": "^2.6.1",
     "rimraf": "^5.0.0",
     "testcafe": "2.5.0"
-  },
-  "dependencies": {
-    "@axe-devtools/script-builder": "^4.6.1"
   }
 }
