--- a/Node/puppeteer/package.json
+++ b/Node/puppeteer/package.json
@@ -4,6 +4,7 @@
   "description": "This example project uses `@axe-devtools/reporter`, `@axe-devtools/puppeteer`, and `puppeteer`. See `README` to learn more.",
   "main": "index.js",
   "scripts": {
+    "preinstall": "axe-devtools-install puppeteer reporter",
     "test": "rimraf ./a11y-results && node ./tests/example.spec.js"
   },
   "keywords": [
@@ -12,8 +13,6 @@
   "author": "Ankit Kathal",
   "license": "ISC",
   "devDependencies": {
-    "@axe-devtools/puppeteer": "^4.4.1",
-    "@axe-devtools/reporter": "^4.4.0",
     "puppeteer": "^13.7.0",
     "rimraf": "^3.0.2"
   }
