--- a/Node/webdriver.js_vanilla/package.json
+++ b/Node/webdriver.js_vanilla/package.json
@@ -4,6 +4,7 @@
   "description": "This example project uses `@axe-devtools/reporter`, `@axe-devtools/webdriverjs`, and `selenium-webdriver`. See `README` to learn more.",
   "main": "index.js",
   "scripts": {
+    "preinstall": "axe-devtools-install webdriverjs reporter",
     "test": "rimraf ./a11y-results && node ./tests/example.spec.js "
   },
   "keywords": [
@@ -12,8 +13,6 @@
   "author": "Ankit Kathal",
   "license": "ISC",
   "devDependencies": {
-    "@axe-devtools/reporter": "^4.4.0",
-    "@axe-devtools/webdriverjs": "^4.4.1",
     "selenium-webdriver": "^4.1.2",
     "rimraf": "^3.0.2"
   }
