--- a/Node/jest-enzyme/package.json
+++ b/Node/jest-enzyme/package.json
@@ -2,12 +2,11 @@
   "name": "jest-enzyme",
   "description": "Example project using `@axe-devtools/reporter`, `@axe-devtools/browser`, jest, and enzyme.",
   "scripts": {
+    "preinstall": "axe-devtools-install browser reporter",
     "pretest": "rimraf ./a11y-results",
     "test": "jest"
   },
   "devDependencies": {
-    "@axe-devtools/browser": "^4.4.0",
-    "@axe-devtools/reporter": "^4.4.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
