--- a/Node/jest-reactdom/package.json
+++ b/Node/jest-reactdom/package.json
@@ -2,12 +2,11 @@
   "name": "jest-reactdom",
   "description": "Example project using `@axe-devtools/reporter`, `@axe-devtools/browser`, jest, and react-dom.",
   "scripts": {
+    "preinstall": "axe-devtools-install browser reporter",
     "pretest": "rimraf ./a11y-results",
     "test": "jest"
   },
   "devDependencies": {
-    "@axe-devtools/browser": "^4.4.1",
-    "@axe-devtools/reporter": "^4.4.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "jest": "^27.5.1",
