--- a/Node/nextjs/package.json
+++ b/Node/nextjs/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "axe-devtools-install browser reporter",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,8 +15,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@axe-devtools/browser": "^4.7.0",
-    "@axe-devtools/reporter": "^4.7.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.0",
