--- a/Node/playwright/package.json
+++ b/Node/playwright/package.json
@@ -4,6 +4,7 @@
   "description": "This example project uses `@axe-devtools/reporter`, `@axe-devtools/playwright`, and `@playwright/test`. See `README` to learn more.",
   "main": "index.js",
   "scripts": {
+    "preinstall": "axe-devtools-install playwright reporter",
     "test": "rimraf ./a11y-results/ && npx playwright test --headed"
   },
   "keywords": [
@@ -13,8 +14,6 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.21.1",
-    "@axe-devtools/playwright": "^4.4.1",
-    "@axe-devtools/reporter": "^4.4.0",
     "rimraf": "^3.0.2"
   }
 }
