--- a/Node/webdriverjs-mocha/package.json
+++ b/Node/webdriverjs-mocha/package.json
@@ -7,8 +7,6 @@
     "url": "http://deque.com"
   },
   "dependencies": {
-    "@axe-devtools/reporter": "^4.4.0",
-    "@axe-devtools/webdriverjs": "^4.4.0",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "mocha": "^8.2.1",
@@ -16,6 +14,7 @@
     "selenium-webdriver": "^4.0.0-alpha.8"
   },
   "scripts": {
+    "preinstall": "axe-devtools-install webdriverjs reporter",
     "test": "rimraf ./a11y-results && mocha _tests_ --colors --timeout 60000"
   }
 }
