--- a/Java/java-selenium/pom.xml
+++ b/Java/java-selenium/pom.xml
@@ -51,6 +51,14 @@
       <artifactId>webdrivermanager</artifactId>
       <version>5.1.0</version>
     </dependency>
+
+    <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-edge-driver</artifactId>
+    <version>4.1.3</version>
+    <scope>test</scope>
+</dependency>
+
   </dependencies>
 
   <build>
