--- a/Node/webdriverio/package.json
+++ b/Node/webdriverio/package.json
@@ -11,13 +11,14 @@
   "devDependencies": {
     "@wdio/cli": "^6.11.3",
     "@wdio/local-runner": "^6.11.3",
-    "@wdio/mocha-framework": "^6.11.0",
+    "@wdio/mocha-framework": "^8.29.0",
     "@wdio/selenium-standalone-service": "^6.11.0",
     "@wdio/spec-reporter": "^6.11.0",
     "chai": "^4.2.0",
+    "chromedriver": "^120.0.2",
     "rimraf": "^3.0.2",
     "wdio-chromedriver-service": "^6.0.4",
-    "webdriverio": "^6.11.3"
+    "webdriverio": "^6.12.1"
   },
   "dependencies": {
     "@axe-devtools/reporter": "^4.4.0",
